# python-libjuju

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  pyproject.toml  setup.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: BugReport.yml  FeatureRequest.yml
.github/workflows/: pre-commit.yaml  stale.yaml  static-analysis.yaml  test.yaml  test_candidate.yaml  test_edge.yaml
debian/: changelog  control  copyright
docs/: CONTRIBUTING.md  changelog.rst  conf.py  index.rst  readme.rst  requirements.txt
docs/_extensions/: automembersummary.py
docs/api/: modules.rst
docs/howto/: #manage-machines.rst#  index.rst  manage-actions.rst  manage-applications.rst  manage-charm-resources.rst  manage-charms.rst  manage-clouds.rst  manage-controllers.rst  manage-credentials.rst  manage-machines.rst  manage-models.rst  manage-offers.rst  manage-python-libjuju.rst  manage-relations.rst  manage-secret-backends.rst  manage-secrets.rst  manage-spaces.rst  manage-ssh-keys.rst  manage-storage-pools.rst  manage-storage.rst  manage-units.rst  manage-users.rst
docs/narrative/: controller.rst  model.rst
examples/: action.py  add_k8s.py  add_machine.py  add_model.py  add_secrets_backend.py  allwatcher.py  charmhub_deploy_k8s.py  charmhub_deploy_machine.py  charmhub_find.py  charmhub_info.py  cloud.py  clouds.py  config.py  connect_current_model.py  controller.py  credential.py  crossmodel.py  crossmodel_bundle.py  crossmodel_controller.py  crossmodel_relation.py  debug-log.py  deploy.py  deploy_bundle.py  deploy_bundle_charmhub.py  deploy_bundle_with_trust.py  deploy_constraints.py  deploy_local_big_k8s_bundle.py  deploy_local_bundle_with_resources.py  deploy_local_file_resource.py  deploy_local_resource.py  deploy_with_revision.py  expose-application.py  formatted_status.py  fullstatus.py  future.py  get_cloud.py  leadership.py  list_secrets.py  livemodel.py  local_refresh.py  (+10 more)
examples/charms/ubuntu/: config.yaml  metadata.yaml
examples/k8s-local-bundle/: big-k8s-bundle.yaml
juju/: __init__.py  _jasyncio.py  action.py  annotationhelper.py  application.py  bundle.py  charm.py  charmhub.py  constraints.py  controller.py  delta.py  errors.py  exceptions.py  jasyncio.py  juju.py  loop.py  machine.py  model.py  names.py  offerendpoints.py  origin.py  placement.py  provisioner.py  relation.py  secrets.py  status.py  tag.py  unit.py  url.py  user.py  utils.py  version.py
juju/client/: SCHEMAS.md  _client.py  _client1.py  _client10.py  _client11.py  _client12.py  _client17.py  _client19.py  _client2.py  _client20.py  _client3.py  _client4.py  _client5.py  _client6.py  _client7.py  _client8.py  _client9.py  _definitions.py  client.py  codegen.py  connection.py  connector.py  facade.py  facade_versions.py  gocookies.py  jujudata.py  overrides.py  runner.py  schemas-juju-3.1.0.json  schemas-juju-3.1.1.json  schemas-juju-3.1.10.json  schemas-juju-3.1.5.json  schemas-juju-3.3.0.json  schemas-juju-3.4.6.json  schemas-juju-3.5.0.json  schemas-juju-3.5.4.json  schemas-juju-3.5.5.json  schemas-juju-3.6-rc1.json
juju/client/proxy/: __init__.py  factory.py  proxy.py
juju/client/proxy/kubernetes/: __init__.py  proxy.py
scripts/: copyright.sh  gendoc
tests/: base.py  utils.py
tests/charm-folder-symlink/: metadata.yaml
tests/charm-secret/: config.yaml  metadata.yaml  pyproject.toml  tox.ini
tests/charm-secret/src/: charm.py
tests/integration/: test_application.py  test_charmhub.py  test_client.py  test_connection.py  test_controller.py  test_crossmodel.py  test_errors.py  test_expose.py  test_juju.py  test_macaroon_auth.py  test_machine.py  test_model.py  test_secrets.py  test_unit.py
tests/integration/bundle/: bundle-include-base64.yaml  config-base64.yaml
tests/integration/bundle/test-overlays/: bundle-with-overlay-multi.yaml  test-multi-overlay.yaml  test-overlay.yaml  test-overlay2.yaml  test-overlay3.yaml
tests/integration/charm/: metadata.yaml
tests/integration/charm-assumes/: manifest.yaml  metadata.yaml
tests/integration/charm-base-charmcraft-yaml/: charmcraft.yaml
tests/unit/: test_application.py  test_bundle.py  test_client.py  test_connection.py  test_constraints.py  test_controller.py  test_definitions.py  test_flags.py  test_gocookies.py  test_jujudata.py  test_loop.py  test_machine.py  test_model.py  test_offerendpoint.py  test_origin.py  test_overrides.py  test_placement.py  test_proxy.py  test_proxy_kubernetes.py  test_registration_string.py  test_relation.py  test_secrets.py  test_status.py  test_unit.py  test_url.py  test_utils.py
tests/validate/: test_facade_versions.py  test_facades.py  test_status_severity.py
